<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    style="@style/DarkBackground">

    <TextView
        style="@style/MetalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client_options"
        android:layout_marginBottom="32dp"/>

    <Button
        style="@style/MetalButton"
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:layout_marginBottom="16dp"/>

    <Button
        style="@style/MetalButton"
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:layout_marginBottom="16dp"/>

    <Button
        style="@style/MetalButton"
        android:id="@+id/update_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_profile"
        android:layout_marginBottom="16dp"/>

    <Button
        style="@style/MetalButton"
        android:id="@+id/delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_account"
        android:backgroundTint="@android:color/holo_red_dark"/>

</LinearLayout> 