<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo1"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp">
            
            <!-- Texto con sombra clara -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_message"
                android:textSize="32sp"
                android:textColor="@color/dark_red"
                android:fontFamily="@font/metal_mania"
                android:shadowColor="@color/white"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="15"
                android:gravity="center"/>

            <!-- Texto principal con sombra oscura -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_message"
                android:textSize="32sp"
                android:textColor="@color/dark_red"
                android:fontFamily="@font/metal_mania"
                android:shadowColor="@color/black"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="4"
                android:gravity="center"/>
        </FrameLayout>

        <Button
            android:id="@+id/admin_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_as_admin"
            style="@style/MetalButton"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/client_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_as_client"
            style="@style/MetalButton"/>

    </LinearLayout>
</RelativeLayout>